<resources>
    <string name="app_name">Hair Salon</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="add_customer">Add Customer</string>
    <string name="cancel">Cancel</string>
    <string name="delete_customer">Delete Customer</string>
    <string name="textview">TextView</string>
    <string name="update_customer">Update Customer</string>
    <string name="go_back">Go Back</string>
</resources>