<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.AddCustomerScreen"
    android:background="@drawable/fadedlights">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="287dp"
        android:layout_margin="20dp"
        android:background="@drawable/whiteoverlay">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/firstNameTextBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="true"
                android:ems="10"
                android:inputType="none"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/lastNameTextBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="true"
                android:ems="10"
                android:inputType="none"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/phoneNumTextBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="true"
                android:ems="10"
                android:inputType="none"
                android:textSize="18sp"
                android:textColor="@color/black"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/addressTextBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="true"
                android:ems="10"
                android:inputType="none"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/addErrorTextBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FF0000"
                    android:text="Error Message Placeholder"
                    android:layout_marginHorizontal="25dp"
                    android:textSize="15sp" />
            </TableRow>
        </TableRow>
    </TableLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/secondAddCustomerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#e7d5cb"
            android:text="@string/add_customer"
            android:textColor="#000000" />

        <Button
            android:id="@+id/returnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#e7d5cb"
            android:text="@string/go_back"
            android:textColor="#000000" />

    </LinearLayout>

</LinearLayout>